# sql_guia_pratico

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  teste2-Copy1.ipynb  teste2.ipynb
.devcontainer/: devcontainer.json
