[tool.poetry]
name = "Projeto_sql-guia-pratico"
version = "0.1.0"
description = "Este projeto tem o objetivo de testar alguns códigos sql do livro SQL GUIA PRATICO"
authors = ["Espedito Ferreira Alves <espeditoalves123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
